<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu.Fragment_Call">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/in_Invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Invite Friends"
                android:textColor="@color/black"
                android:textSize="25sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="@dimen/_298sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center_horizontal"
                android:text="@string/none_of_your_contact_are_using_chatify" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:text="@string/invite_friends"
                android:textColor="@color/md_theme_primary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="@dimen/_298sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center_horizontal"
                android:text="@string/chat_with_your_friends_who_use_chatify" />
        </LinearLayout>

    </FrameLayout>

</layout>