<?xml version="1.0" encoding="utf-8"?>
<layout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp"
        tools:context=".view.activities.auth.phoneLoginActivity">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/enter_your_phone_number"
                android:textColor="@color/md_theme_primary"
                android:textSize="20sp"
                android:textStyle="bold" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lottie1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout3"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/splash" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lottie1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/_2sdp"
                android:text="@string/chatify_will_send_an_sms_message_to_verify_your_phone_number"
                android:textAllCaps="true"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_2sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_2sdp"
                    android:text="+"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneNumberLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumberEt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/_91"
                        android:importantForAccessibility="yes"
                        android:inputType="phone"
                        android:maxLength="3"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneNumberLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumberEt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phone_number"
                        android:importantForAccessibility="yes"
                        android:inputType="phone"
                        android:maxLength="13"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberLayout3"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_code"
                    android:importantForAccessibility="yes"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_100sdp"
            android:text="@string/next"
            android:textColor="@color/md_theme_primary"
            android:textStyle="bold" />
    </RelativeLayout>
</layout>