<?xml version="1.0" encoding="utf-8"?>
<layout>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.contact.AddContact">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="10dp">

                    <ImageView
                        android:id="@+id/backButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:padding="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/back" />

                    <com.google.android.material.appbar.AppBarLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbar3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:title="New Contact"
                            app:titleTextAppearance="@style/ToolbarTitleStyle2" />

                    </com.google.android.material.appbar.AppBarLayout>

                </LinearLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/newUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="6dp"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/adduser"
                    app:civ_border_color="#727970"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="14dp"
                    android:padding="2dp"
                    android:text="@string/new_user"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/newContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/Contact"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="6dp"
                    android:padding="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/newgroup"
                    app:civ_border_color="#727970"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="14dp"
                    android:padding="2dp"
                    android:text="@string/new_group"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="10dp"
                    android:letterSpacing=".25"
                    android:padding="2dp"
                    android:text="@string/contact_on_chatify"
                    android:textAllCaps="true"
                    android:textColor="#727970"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".2dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:background="#727970" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- RecyclerView for displaying contacts -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/contactsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/newContact" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
